chatgpt orqali intellijga ulanib kordim